# ai-agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  create_agent.py  docker-compose.yml  env.dist  generate-boilerplate.sh  populate_memory.sh  pyproject.toml  requirements.txt  run.sh
app/: a2a_card.py  api.py  config.py  main.py  prompts.py  runtime.py
app/agent/: agent.py  agent_state.py  simple_agent.py
app/api/: routes.py
app/core/: banner.py  config.py  logger.py  provider.py  runtime.py  tool_runtime.py
app/core/a2a/: __init__.py  a2a.py  orchestrator.py
app/core/mcp/: __init__.py  client.py  manager.py
app/mcp/: __init__.py  client.py  manager.py
app/memory/: long_term_memory_manager.py  manager.py  short_term_memory_manager.py
app/model/: agent_request.py  agent_state.py  simple_agent_request.py  simple_agent_state.py
scripts/: create_agent.py  models.py
tests/: test_a2a_registration_poll.py  test_agent_memory.py  test_create_agent_smoke.py  test_health_check.py  test_prompts.py  test_request_validation.py  test_tool_runtime.py
ui/: index.html
